Added chair animation to toggler

--- a/animations.css
+++ b/animations.css
@@ -9,6 +9,18 @@
     }
 }
 
+@keyframes chair {
+    0% {
+        transform: rotate(0deg);
+    }
+    50% {
+        transform: rotate(20deg);
+    }
+    100% {
+        transform: rotate(0deg);
+    }
+}
+
 /* Default life */
 
 @keyframes background-life {
