--- a/styles.css
+++ b/styles.css
@@ -4,116 +4,116 @@
 @import "./media.css";
 
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    margin: 0;
-    background: #1b1b1b;
-    font-family: 'Roboto Condensed', sans-serif;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  background: #1b1b1b;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .content {
-    position: relative;
-    width: 100vw;
-    height: 100vh;
-    background: #1b1b1b;
-    animation: 10s background-life infinite 0s;
-    z-index: 1;
-    overflow: hidden;
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  background: #1b1b1b;
+  animation: 10s background-life infinite 0s;
+  z-index: 1;
+  overflow: hidden;
 }
 
 /* Work in progress */
 
 .work-in-progress {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .work-in-progress__spinner {
-    position: absolute;
-    top: -18px;
-    right: -20px;
-    display: flex;
-    flex: 1 0 auto;
-    align-items: flex-end;
-    justify-content: flex-end;
-    width: 50px;
-    height: 50px;
-    line-height: 1;
-    padding: 5px;
-    color: #f5f5f5;
-    border: 4px solid #ff8800;
-    animation: 5s infinite 0s spinner, 10s spinner-life infinite 0s;
-    background: #1f1f1f;
+  position: absolute;
+  top: -18px;
+  right: -20px;
+  display: flex;
+  flex: 1 0 auto;
+  align-items: flex-end;
+  justify-content: flex-end;
+  width: 50px;
+  height: 50px;
+  line-height: 1;
+  padding: 5px;
+  color: #f5f5f5;
+  border: 4px solid #ff8800;
+  animation: 5s infinite 0s spinner, 10s spinner-life infinite 0s;
+  background: #1f1f1f;
 }
 
 .work-in-progress__title {
-    position: relative;
-    display: block;
-    text-transform: uppercase;
-    font-size: 42px;
-    line-height: 36px;
-    color: #f5f5f5;
-    animation: 10s text-life infinite 0s;
+  position: relative;
+  display: block;
+  text-transform: uppercase;
+  font-size: 42px;
+  line-height: 36px;
+  color: #f5f5f5;
+  animation: 10s text-life infinite 0s;
 }
 
 .work-in-progress__title:after {
-    content: '';
-    position: absolute;
-    left: 2px;
-    bottom: -6px;
-    width: 45px;
-    height: 4px;
-    background: #ff8800;
-    animation: 10s dash-life infinite 0s;
+  content: '';
+  position: absolute;
+  left: 2px;
+  bottom: -6px;
+  width: 45px;
+  height: 4px;
+  background: #ff8800;
+  animation: 10s dash-life infinite 0s;
 }
 
 /* Fun toggler */
 
 .fun-toggler {
-    position: fixed;
-    bottom: 10px;
-    left: 10px;
-    display: block;
-    width: 40px;
-    height: 40px;
-    cursor: pointer;
-    opacity: 0.2;
-    background: url('./favicon/apple-icon.png') no-repeat center center;
-    background-size: contain;
-    transition: opacity 0.1s ease-in-out 0s;
-    z-index: 2;
-    appearance: none;
-    -moz-appearance: none;
-    -webkit-appearance: none;
+  position: fixed;
+  bottom: 10px;
+  left: 10px;
+  display: block;
+  width: 40px;
+  height: 40px;
+  cursor: pointer;
+  opacity: 0.2;
+  background: url('./favicon/apple-icon.png') no-repeat center center;
+  background-size: contain;
+  transition: opacity 0.1s ease-in-out 0s;
+  z-index: 2;
+  appearance: none;
+  -moz-appearance: none;
+  -webkit-appearance: none;
 }
 
 .fun-toggler:hover {
-    opacity: 1;
+  opacity: 1;
 }
 
 .fun-toggler:not(:checked):hover {
-    animation: 1s chair infinite 0s;
+  animation: 1s chair infinite 0s;
 }
 
 .fun-toggler:checked {
-    opacity: 1;
-    animation: 1s spinner;
+  opacity: 1;
+  animation: 1s spinner;
 }
 
 .fun-toggler:checked + .content {
-    animation: 1s background-life-fun infinite 0s;
+  animation: 1s background-life-fun infinite 0s;
 }
 
 .fun-toggler:checked + .content .work-in-progress {
-    transform: translate(-50%, -50%) scaleX(-1);
-    filter: blur(3px);
+  transform: translate(-50%, -50%) scaleX(-1);
+  filter: blur(3px);
 }
 
 
@@ -124,4 +124,25 @@ body {
 
 .fun-toggler:checked + .content .work-in-progress__spinner {
 
+}
+
+/* Projects */
+
+.projects {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  right: 10px;
+  z-index: 3;
+  padding: 10px;
+  background: #fff;
+}
+
+.projects__label {
+  display: block;
+  font-size: 18px;
+  margin-bottom: 5px;
+}
+
+.project {
 }
