--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,10 @@
-@import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&display=swap');
 
-@import "./animations.css";
-@import "./media.css";
+:root {
+  --greetings-background: #fbfbfb;
+  --organization-link-color: #137117;
+  --pet-border-radius: 6px;
+}
 
 * {
   box-sizing: border-box;
@@ -12,144 +15,119 @@ body {
   width: 100vw;
   height: 100vh;
   margin: 0;
-  background: #1b1b1b;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 16px;
+  line-height: 1.17;
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3 {
+  margin: 0;
+}
+
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+
+li {
+
 }
 
 .content {
   position: relative;
+  display: flex;
   width: 100vw;
   height: 100vh;
-  background: #1b1b1b;
-  animation: 10s background-life infinite 0s;
   z-index: 1;
   overflow: hidden;
 }
 
-/* Work in progress */
-
-.work-in-progress {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.greetings {
+  flex: 0 0 500px;
+  height: 100%;
+  padding: 20px;
+  background: var(--greetings-background);
 }
 
-.work-in-progress__spinner {
-  position: absolute;
-  top: -18px;
-  right: -20px;
-  display: flex;
-  flex: 1 0 auto;
-  align-items: flex-end;
-  justify-content: flex-end;
-  width: 50px;
-  height: 50px;
-  line-height: 1;
-  padding: 5px;
-  color: #f5f5f5;
-  border: 4px solid #ff8800;
-  animation: 5s infinite 0s spinner, 10s spinner-life infinite 0s;
-  background: #1f1f1f;
+.who {
+  font-size: 58px;
+  font-weight: bold;
 }
 
-.work-in-progress__title {
+.profession {
+  font-size: 24px;
+  font-weight: normal;
+}
+
+.organization {
+  font-size: 20px;
+}
+
+.organization__link {
+  color: var(--organization-link-color);
+  font-style: italic;
+  opacity: 0.8;
+  transition: color 0.125s linear;
+}
+
+.organization__link:hover {
+  color: #0d9413;
+}
+
+.story-telling {
+  height: 100%;
+  padding: 20px;
+  overflow-y: auto;
+}
+
+.pet-projects__caption {
+  display: block;
+  margin-bottom: 20px;
+  font-size: 24px;
+}
+
+.pet-projects__list {
+  display: grid;
+  grid-template-columns: 300px 300px 300px;
+  grid-gap: 20px;
+}
+
+.pet-project {
   position: relative;
-  display: block;
-  text-transform: uppercase;
-  font-size: 42px;
-  line-height: 36px;
-  color: #f5f5f5;
-  animation: 10s text-life infinite 0s;
+  display: flex;
+  width: 300px;
+  color: black;
+  text-decoration: none;
+  border: 1px solid #e2e2e2;
+  border-radius: var(--pet-border-radius);
+  transition: border-color 0.125s linear;
 }
 
-.work-in-progress__title:after {
-  content: '';
-  position: absolute;
-  left: 2px;
-  bottom: -6px;
-  width: 45px;
-  height: 4px;
-  background: #ff8800;
-  animation: 10s dash-life infinite 0s;
+.pet-project:hover {
+  border-color: #c7c7c7;
 }
 
-/* Fun toggler */
-
-.fun-toggler {
-  position: fixed;
-  bottom: 10px;
-  left: 10px;
-  display: block;
-  width: 40px;
-  height: 40px;
-  cursor: pointer;
-  opacity: 0.2;
-  background: url('./favicon/apple-icon.png') no-repeat center center;
-  background-size: contain;
-  transition: opacity 0.1s ease-in-out 0s;
-  z-index: 2;
-  appearance: none;
-  -moz-appearance: none;
-  -webkit-appearance: none;
+.pet-project__image {
+  height: 180px;
+  max-width: 100%;
+  object-fit: cover;
+  opacity: 0.8;
+  border-radius: var(--pet-border-radius);
+  transition: opacity 0.125s linear;
 }
 
-.fun-toggler:hover {
+.pet-project:hover .pet-project__image {
   opacity: 1;
 }
 
-.fun-toggler:not(:checked):hover {
-  animation: 1s chair infinite 0s;
-}
-
-.fun-toggler:checked {
-  opacity: 1;
-  animation: 1s spinner;
-}
-
-.fun-toggler:checked + .content {
-  animation: 1s background-life-fun infinite 0s;
-}
-
-.fun-toggler:checked + .content .work-in-progress {
-  transform: translate(-50%, -50%) scaleX(-1);
-  filter: blur(3px);
-}
-
-
-
-.fun-toggler:checked + .content .work-in-progress__title:after {
-
-}
-
-.fun-toggler:checked + .content .work-in-progress__spinner {
-
-}
-
-/* Projects */
-
-.projects {
+.pet-project__name {
   position: absolute;
-  top: 10px;
-  left: 10px;
-  right: 10px;
-  z-index: 3;
-}
-
-.projects__section {
+  left: 0;
+  bottom: 0;
+  right: 0;
   padding: 10px;
-  background: #fff;
-}
-
-.projects__section:not(:last-of-type) {
-  margin-bottom: 10px;
-}
-
-.projects__label {
-  display: block;
-  font-size: 18px;
-  margin-bottom: 5px;
-}
-
-.project {
+  text-align: center;
+  border-radius: 0 0 var(--pet-border-radius) var(--pet-border-radius);
+  background: rgba(255, 255, 255, 0.9);
 }
